--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_API=http://localhost:5000 
-# REACT_APP_BACKEND_API=https://media-book-backend.vercel.app
+# REACT_APP_BACKEND_API=http://localhost:5000 
+REACT_APP_BACKEND_API=https://media-book-backend.vercel.app
